--- a/fundamentos-web/html/ejercicio-1/ejercicio.html
+++ b/fundamentos-web/html/ejercicio-1/ejercicio.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Ejercicio HTML</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <h1>Tabla de datos</h1>
+    <div></div>
+    <table border="1">
+    <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>País</th>
+    </tr>
+    <tr>
+        <td>Juan</td>
+        <td>25</td>
+        <td>España</td>
+    </tr>
+    <tr>
+        <td>Maria</td>
+        <td>30</td>
+        <td>México</td>
+    </tr>
+    <tr>
+        <td>Anna</td>
+        <td>22</td>
+        <td>Estados Unidos</td>
+    </tr>
+    </table>
+    <!-- termino mi tabla -->
+</body>
+</html>
 <!--
     EJERCICIO: Construye una tabla <table></table>
     DESCRIPCIÓN:
