--- a/fundamentos-web/html/ejercicio-2/ejercicio.html
+++ b/fundamentos-web/html/ejercicio-2/ejercicio.html
@@ -17,7 +17,7 @@
         <ul>
             <li>
                 <!-- Completa la navegación -->
-                <a href="#">Acerca de</a>
+                <a href="fundamentos-web\html\ejercicio-2\acerca.html">Acerca de</a>
             </li>
         </ul>
     </nav>
@@ -28,10 +28,28 @@
         <form>
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
-        
+        <br /> <br />
             <label for="apellido">Apellido:</label>
             <input type="text" id="apellido" name="apellido" required>
-
+<!-- COMIENZO AGREGAR LOS DEMÁS inputs-->
+        <br /> <br />
+            <label for="mail">Correo Electrónico:</label>
+            <input type="email" id="mail" name="mail" required>
+        <br /> <br />
+            <label for="pasword">Contraseña:</label>
+            <input type="password" id="pasword" name="pasword" required>
+        <br /> <br />
+            <label for="fecha">Fecha de Nacimiento:</label>
+            <input type="date" id="fecha" name="fecha" required>
+        <br /> <br />
+            <label for="telefono">Teléfono:</label>
+            <input type="tel" id="telefono" name="telefono" placeholder="(Código de área) Número" required>
+        <br /> <br />
+            <label for="direccion">Dirección:</label>
+            <textarea name="direccion" rows="3" cols="15"></textarea>
+            <!-- <input type="text" id="direccion" name="direccion" required> -->
+        <br /> <br /> <br /><br />
+        <input type="button" value="Registrar" />
             <!-- Agrega los inputs faltantes -->
         </form>
     </main>
