--- a/fundamentos-web/html/ejercicio-2/acerca.html
+++ b/fundamentos-web/html/ejercicio-2/acerca.html
@@ -26,7 +26,13 @@
     </main>
 
     <footer>
-        <!-- Agrega aquí en link para volver al archivo ejercicio.html -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="fundamentos-web\html\ejercicio-2\ejercicio.html">Regresar al formulario</a>
+                </li>
+            </ul>
+        </nav><!-- Agrega aquí en link para volver al archivo ejercicio.html -->
     </footer>
 </body>
 </html>
