--- a/fundamentos-web/css/ejercicio-1/ejercicio.html
+++ b/fundamentos-web/css/ejercicio-1/ejercicio.html
@@ -9,7 +9,13 @@
 
         /* Estilo para el cuerpo de la página */
         body {
-            /* Configura el fondo y el color del texto */
+            background-color: #27c7cd;
+                        /* Configura el fondo y el color del texto */
+        }
+        h1 {
+    color: #fff;
+    text-align: center;
+    padding: 20px;
         }
 
     </style>
@@ -19,6 +25,7 @@
     <main>
         <h1>
             <!-- Completa el título con: "Mi cosa favorita es:" -->
+            Mi cosa favorita es:
         </h1>
         
         <!-- Agrega aquí la etiqueta para una imagen y vincula con la etiqueta <img /> con la imagen correspondiente  -->
@@ -26,3 +33,4 @@
 
 </body>
 </html>
+
