cambio de enlaces en Acerca de...

--- a/fundamentos-web/html/ejercicio-2/acerca.html
+++ b/fundamentos-web/html/ejercicio-2/acerca.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="fundamentos-web\html\ejercicio-2\ejercicio.html">Regresar al formulario</a>
+                    <a href="C:\Users\21001\Desktop\ANGULAR\SSH\angular-portafolio-ieca\fundamentos-web\html\ejercicio-2\ejercicio.html">Regresar al formulario</a>
                 </li>
             </ul>
         </nav><!-- Agrega aquí en link para volver al archivo ejercicio.html -->
