--- a/fundamentos-web/html/ejercicio-2/ejercicio.html
+++ b/fundamentos-web/html/ejercicio-2/ejercicio.html
@@ -17,7 +17,7 @@
         <ul>
             <li>
                 <!-- Completa la navegación -->
-                <a href="fundamentos-web\html\ejercicio-2\acerca.html">Acerca de</a>
+                <a href="C:\Users\21001\Desktop\ANGULAR\SSH\angular-portafolio-ieca\fundamentos-web\html\ejercicio-2\acerca.html">Acerca de</a>
             </li>
         </ul>
     </nav>
